# csse332-labs-jamesnc

Homework01/src/: mem.c
Homework02/src/: proc_read.c
Homework04/: CMakeLists.txt
Homework04/include/: vm.h
Homework04/src/: CMakeLists.txt  vm.c
Homework04/tests/: CMakeLists.txt  vm_debug.c  vm_tests.c
Lab01/src/: db.c  fib.c  hello.c  vector.c
Lab01/tests/: vector_debug.c
Lab02/: dataout.txt  timedata.txt
Lab02/include/: freading.h  reading.h
Lab02/src/: freading.c  reading.c
Lab03/include/: rhmalloc.h
Lab03/src/: rhmalloc.c
Lab03/tests/: rhmalloc_debug.c  rhmalloc_tests.c
Lab04/: CMakeLists.txt
Lab04/include/: shell.h  sig.h
Lab04/proc/: build_rf.py
Lab04/src/: CMakeLists.txt  shell.c  sig.c
Lab04/tests/: CMakeLists.txt  shell_debug.c  shell_tests.c  simpleshell.c
Lab05/: CMakeLists.txt  mkbuild.sh
Lab05/include/: rf.h  rf_load.h  rf_parse.h
Lab05/proc/: .ruff.toml  1.c  1.rf  2.c  2.rf  3.c  3.rf  4.c  4.rf  5.c  5.rf  6.c  6.rf  7.c  7.rf  csse332.txt  makefile  memlayout.ld
Lab05/src/: CMakeLists.txt  rf_load.c  rf_parse.c
Lab05/tests/: CMakeLists.txt  mmap_example.c  rf_load_debug.c  rf_load_tests.c  rf_parse_debug.c
Lecture_Demos/signals/: mask_demo.c  sigsegv.c  unmask_demo.c
playground/: play.c
